Murphy System/archive/artifacts/outputs/workspace_output_1769055948_4672.txt
  File "/workspace/murphy_backend_phase2.py", line 358
    """
       ^
SyntaxError: f-string: closing parenthesis '}' does not match opening parenthesis '['
